--- a/index.html
+++ b/index.html
@@ -3,19 +3,52 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Waxom</title>
+	<title>Austera</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 
 
 	<!-- Custom fonts for this template -->
-	
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
 	<link rel="stylesheet" href="css/main.css">
+
 </head>
+
 <body>
-	<h1>Hellow World</h1>
+	<!-----------------
+	-------HEADER------
+	------------------>
+	<div class="container-fluid">
+		<header>
+			<!-- Header Menu -->
+			<div class="header_menu row no-gutters d-flex align-items-center">
+				<div class="col-md-3">
+					<a href="#"><img class="header_logo" src="img/header/logo.png" alt="logo"></a>
+				</div>
+				<div class="col-md-9 d-flex justify-content-end">
+					<nav>
+						<ul class="d-flex">
+							<li><a href="#">Homepage</a></li>
+							<li><a href="#">Services</a></li>
+							<li><a href="#">About us</a></li>
+							<li><a href="#">Contact Us</a></li>
+							<li><a href="#"><img src="img/header/search_icon.png" alt="search"></a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+			<!-- Header Main Text -->
+			<div class="header_main_text row no-gutters">
+				<div class="col-12">
+					<h1><span>Austera</span> is simple PSD template</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					<a class="header_button" href="#">Learn more</a>
+				</div>
+			</div>
+		</header>
+	</div>
 </body>
 </html>
