--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<a href="#"><img class="header_logo" src="img/header/logo.png" alt="logo"></a>
 				</div>
 				<div class="col-md-9 d-flex justify-content-end">
-					<nav>
+					<div class="header-navigation">
 						<ul class="d-flex">
 							<li><a href="#">Homepage</a></li>
 							<li><a href="#">Services</a></li>
@@ -37,11 +37,11 @@
 							<li><a href="#">Contact Us</a></li>
 							<li><a href="#"><img src="img/header/search_icon.png" alt="search"></a></li>
 						</ul>
-					</nav>
+					</div>
 				</div>
 			</div>
 			<!-- Header Main Text -->
-			<div class="header_main_text row no-gutters">
+			<div class="header-mainText row no-gutters">
 				<div class="col-12">
 					<h1><span>Austera</span> is simple PSD template</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
@@ -50,5 +50,35 @@
 			</div>
 		</header>
 	</div>
+	<!-----------------
+	---OUR SERVICES----
+	------------------>
+	<div class="container">
+		<section class="our-services">
+			<h2>Our services</h2>
+			<div class="row no-gutters">
+				<div class="our-services_item1 col-3">
+					<img src="img/our-services/icon-1.png" alt="icon1">
+					<h3>Responsive design</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.</p>
+				</div>
+				<div class="our-services_item1 col-3">
+					<img src="img/our-services/icon-2.png" alt="icon2">
+					<h3>Endless Security</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio. </p>
+				</div>
+				<div class="our-services_item1 col-3">
+					<img src="img/our-services/icon-3.png" alt="icon3">
+					<h3>Incredible features</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.</p>
+				</div>
+				<div class="our-services_item1 col-3">
+					<img src="img/our-services/icon-4.png" alt="icon4">
+					<h3>Fresh ideas</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio.</p>
+				</div>
+			</div>
+		</section>
+	</div>	
 </body>
 </html>
