--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Austera</title>
 
 	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="css/bootstrap-reboot.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 
 
@@ -22,30 +23,32 @@
 	-------HEADER------
 	------------------>
 	<div class="container-fluid">
-		<header>
-			<!-- Header Menu -->
-			<div class="header_menu row no-gutters d-flex align-items-center">
-				<div class="col-md-3">
-					<a href="#"><img class="header_logo" src="img/header/logo.png" alt="logo"></a>
-				</div>
-				<div class="col-md-9 d-flex justify-content-end">
-					<div class="header-navigation">
-						<ul class="d-flex">
-							<li><a href="#">Homepage</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">About us</a></li>
-							<li><a href="#">Contact Us</a></li>
-							<li><a href="#"><img src="img/header/search_icon.png" alt="search"></a></li>
-						</ul>
+		<header class="row">
+			<div class="col-12">
+				<!-- Header Menu -->
+				<div class="header_menu row d-flex align-items-center">
+					<div class="col-md-3">
+						<a href="#"><img class="header_logo" src="img/header/logo.png" alt="logo"></a>
+					</div>
+					<div class="col-md-9 d-flex justify-content-end">
+						<div class="header-navigation">
+							<ul class="d-flex">
+								<li><a href="#">Homepage</a></li>
+								<li><a href="#">Services</a></li>
+								<li><a href="#">About us</a></li>
+								<li><a href="#">Contact Us</a></li>
+								<li><a href="#"><img src="img/header/search_icon.png" alt="search"></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
-			</div>
-			<!-- Header Main Text -->
-			<div class="header-mainText row no-gutters">
-				<div class="col-12">
-					<h1><span>Austera</span> is simple PSD template</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-					<a class="header_button" href="#">Learn more</a>
+				<!-- Header Main Text -->
+				<div class="header-mainText row">
+					<div class="col-12">
+						<h1><span>Austera</span> is simple PSD template</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+						<a class="button" href="#">Learn more</a>
+					</div>
 				</div>
 			</div>
 		</header>
@@ -53,32 +56,138 @@
 	<!-----------------
 	---OUR SERVICES----
 	------------------>
+	<div class="bg-services">
+		<div class="container">
+			<section class="our-services">
+				<h2>Our services</h2>
+				<div class="row no-gutters">
+					<div class="our-services_item1 col-3">
+						<img src="img/our-services/icon-1.png" alt="icon1">
+						<h3>Responsive design</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.
+						</p>
+					</div>
+					<div class="our-services_item1 col-3">
+						<img src="img/our-services/icon-2.png" alt="icon2">
+						<h3>Endless Security</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio.
+						</p>
+					</div>
+					<div class="our-services_item1 col-3">
+						<img src="img/our-services/icon-3.png" alt="icon3">
+						<h3>Incredible features</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.
+						</p>
+					</div>
+					<div class="our-services_item1 col-3">
+						<img src="img/our-services/icon-4.png" alt="icon4">
+						<h3>Fresh ideas</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio.
+						</p>
+					</div>
+				</div>
+				<div>
+					<a class="services-button_1 button" href="#">Check services</a>
+				</div>
+				<div class="services-2 row no-gutters d-flex align-items-center">
+					<div class="col-6">
+						<h3>Lorem ipsum dolor sit amet</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio. Phasellus ipsum lorem, finibus semper sollicitudin ac, varius ut velit. Maecenas hendrerit ac ligula eu ultrices.
+						</p>
+						<a class="services-button_2 button" href="#">Show more</a>
+					</div>
+					<div class="services-icon-5 p-0 col-6"></div>
+				</div>
+				<div class="services-3 row d-flex align-items-center">
+					<div class="services-icon-6 p-0 col-6"></div>
+					<div class="serv-padd col-6">
+						<h3>Lorem ipsum dolor sit amet</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio. Phasellus ipsum lorem, finibus semper sollicitudin ac, varius ut velit. Maecenas hendrerit ac ligula eu ultrices.
+						</p>
+						<a class="services-button_3 button" href="#">Show more</a>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+	<!-----------------
+	----LEARN MORE-----
+	------------------>
+	<div class="container-fluid">
+		<div class="row d-flex align-items-center">
+			<div class="lm-bg p-0 col-6"></div>
+			<div class="lm-text col-6">
+				<h3>Lorem ipsum dolor sit amet</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio. Phasellus ipsum lorem, finibus semper sollicitudin ac, varius ut velit. Maecenas hendrerit ac ligula eu ultrices.
+				</p>
+				<a class="lm-btn button" href="#">Learn More</a>
+			</div>
+		</div>
+		<div class="row">
+			<div style="background: url(img/learn-more/lm-ico1.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+				<div class="ico-wrap d-flex align-items-center justify-content-center">
+					<h3>Lorem ipsum  dolor sit amet</h3>
+				</div>
+			</div>
+			<div style="background: url(img/learn-more/lm-ico2.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+				<div class="ico-wrap d-flex align-items-center justify-content-center">
+					<h3>Nunc fringilla  tortor urna</h3>
+				</div>
+			</div>
+			<div style="background: url(img/learn-more/lm-ico3.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+				<div class="ico-wrap d-flex align-items-center justify-content-center">
+					<h3>Nulla pulvinar  pulvinar est</h3>
+				</div>
+			</div>
+			<div style="background: url(img/learn-more/lm-ico4.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+				<div class="ico-wrap d-flex align-items-center justify-content-center">
+					<h3>Fusce at  diam condim</h3>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-----------------
+	------FOOTER-------
+	------------------>
 	<div class="container">
-		<section class="our-services">
-			<h2>Our services</h2>
-			<div class="row no-gutters">
-				<div class="our-services_item1 col-3">
-					<img src="img/our-services/icon-1.png" alt="icon1">
-					<h3>Responsive design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.</p>
-				</div>
-				<div class="our-services_item1 col-3">
-					<img src="img/our-services/icon-2.png" alt="icon2">
-					<h3>Endless Security</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio. </p>
-				</div>
-				<div class="our-services_item1 col-3">
-					<img src="img/our-services/icon-3.png" alt="icon3">
-					<h3>Incredible features</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.</p>
-				</div>
-				<div class="our-services_item1 col-3">
-					<img src="img/our-services/icon-4.png" alt="icon4">
-					<h3>Fresh ideas</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio.</p>
+		<section class="footer">
+			<div class="chk-our">
+				<h2>Check our <br><span>awesome team</span></h2>
+				<div class="row">
+					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
+						<div><img src="img/footer/footer-ico1.png" alt="ico1"></div>
+						<h3>John Doe</h3>
+						<p>Ceo&Founder</p>
+						<a class="footer-check_btn button" href="#">Check profile</a>
+					</div>
+					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
+						<div><img src="img/footer/footer-ico2.png" alt="ico1"></div>
+						<h3>John Doe</h3>
+						<p>Ceo&Founder</p>
+						<a class="footer-check_btn button" href="#">Check profile</a>
+					</div>
+					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
+						<div><img src="img/footer/footer-ico3.png" alt="ico1"></div>
+						<h3>John Doe</h3>
+						<p>Ceo&Founder</p>
+						<a class="footer-check_btn button" href="#">Check profile</a>
+					</div>
+					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
+						<div><img src="img/footer/footer-ico4.png" alt="ico1"></div>
+						<h3>John Doe</h3>
+						<p>Ceo&Founder</p>
+						<a class="footer-check_btn button" href="#">Check profile</a>
+					</div>
 				</div>
 			</div>
 		</section>
-	</div>	
+	</div>
 </body>
 </html>
