--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" href="css/bootstrap-reboot.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 
-
 	<!-- Custom fonts for this template -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
-	<!-- Custom styles for this template -->
+	<!-- Custom styles for this template and media -->
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/media.css">
 
 </head>
 
@@ -26,26 +26,28 @@
 		<header class="row">
 			<div class="col-12">
 				<!-- Header Menu -->
-				<div class="header_menu row d-flex align-items-center">
-					<div class="col-md-3">
+				<div class="header-menu row d-flex align-items-center">
+					<div class="col-md-6 col-lg-3">
 						<a href="#"><img class="header_logo" src="img/header/logo.png" alt="logo"></a>
 					</div>
-					<div class="col-md-9 d-flex justify-content-end">
-						<div class="header-navigation">
-							<ul class="d-flex">
-								<li><a href="#">Homepage</a></li>
-								<li><a href="#">Services</a></li>
-								<li><a href="#">About us</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#"><img src="img/header/search_icon.png" alt="search"></a></li>
-							</ul>
+					<div class="col-md-6 col-lg-9 d-none d-lg-block d-xl-block">
+						<div class="header-menu-flex d-flex justify-content-end align-items-center">
+							<div class="header-navigation">
+								<ul class="d-flex">
+									<li><a href="#">Homepage</a></li>
+									<li><a href="#">Services</a></li>
+									<li><a href="#">About us</a></li>
+									<li><a href="#">Contact Us</a></li>
+									<li><a href="#"><img src="img/header/search_icon.png" alt="search"></a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 				<!-- Header Main Text -->
 				<div class="header-mainText row">
 					<div class="col-12">
-						<h1><span>Austera</span> is simple PSD template</h1>
+						<h1><span class="color-blue">Austera</span> is simple PSD template</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
 						<a class="button" href="#">Learn more</a>
 					</div>
@@ -61,28 +63,28 @@
 			<section class="our-services">
 				<h2>Our services</h2>
 				<div class="row no-gutters">
-					<div class="our-services_item1 col-3">
+					<div class="our-services_item1 col-sm-6 col-lg-3">
 						<img src="img/our-services/icon-1.png" alt="icon1">
 						<h3>Responsive design</h3>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.
 						</p>
 					</div>
-					<div class="our-services_item1 col-3">
+					<div class="our-services_item1 col-sm-6 col-lg-3">
 						<img src="img/our-services/icon-2.png" alt="icon2">
 						<h3>Endless Security</h3>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie. Etiam a ullamcorper odio.
 						</p>
 					</div>
-					<div class="our-services_item1 col-3">
+					<div class="our-services_item1 col-sm-6 col-lg-3">
 						<img src="img/our-services/icon-3.png" alt="icon3">
 						<h3>Incredible features</h3>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie purus a felis condimentum molestie.
 						</p>
 					</div>
-					<div class="our-services_item1 col-3">
+					<div class="our-services_item1 col-sm-6 col-lg-3">
 						<img src="img/our-services/icon-4.png" alt="icon4">
 						<h3>Fresh ideas</h3>
 						<p>
@@ -131,22 +133,22 @@
 			</div>
 		</div>
 		<div class="row">
-			<div style="background: url(img/learn-more/lm-ico1.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+			<div style="background: url(img/learn-more/lm-ico1.jpg) no-repeat center;" class="lm-bg_ico p-0 col-6 col-lg-3">
 				<div class="ico-wrap d-flex align-items-center justify-content-center">
 					<h3>Lorem ipsum  dolor sit amet</h3>
 				</div>
 			</div>
-			<div style="background: url(img/learn-more/lm-ico2.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+			<div style="background: url(img/learn-more/lm-ico2.jpg) no-repeat center;" class="lm-bg_ico p-0 col-6 col-lg-3">
 				<div class="ico-wrap d-flex align-items-center justify-content-center">
 					<h3>Nunc fringilla  tortor urna</h3>
 				</div>
 			</div>
-			<div style="background: url(img/learn-more/lm-ico3.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+			<div style="background: url(img/learn-more/lm-ico3.jpg) no-repeat center;" class="lm-bg_ico p-0 col-6 col-lg-3">
 				<div class="ico-wrap d-flex align-items-center justify-content-center">
 					<h3>Nulla pulvinar  pulvinar est</h3>
 				</div>
 			</div>
-			<div style="background: url(img/learn-more/lm-ico4.jpg) no-repeat center;" class="lm-bg_ico p-0 col-md-3">
+			<div style="background: url(img/learn-more/lm-ico4.jpg) no-repeat center;" class="lm-bg_ico p-0 col-6 col-lg-3">
 				<div class="ico-wrap d-flex align-items-center justify-content-center">
 					<h3>Fusce at  diam condim</h3>
 				</div>
@@ -154,40 +156,88 @@
 		</div>
 	</div>
 	<!-----------------
-	------FOOTER-------
+	----CHECK OUR------
 	------------------>
 	<div class="container">
-		<section class="footer">
-			<div class="chk-our">
-				<h2>Check our <br><span>awesome team</span></h2>
-				<div class="row">
-					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
-						<div><img src="img/footer/footer-ico1.png" alt="ico1"></div>
-						<h3>John Doe</h3>
-						<p>Ceo&Founder</p>
-						<a class="footer-check_btn button" href="#">Check profile</a>
-					</div>
-					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
-						<div><img src="img/footer/footer-ico2.png" alt="ico1"></div>
-						<h3>John Doe</h3>
-						<p>Ceo&Founder</p>
-						<a class="footer-check_btn button" href="#">Check profile</a>
-					</div>
-					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
-						<div><img src="img/footer/footer-ico3.png" alt="ico1"></div>
-						<h3>John Doe</h3>
-						<p>Ceo&Founder</p>
-						<a class="footer-check_btn button" href="#">Check profile</a>
-					</div>
-					<div class="col-3 d-flex justify-content-center flex-column align-items-center">
-						<div><img src="img/footer/footer-ico4.png" alt="ico1"></div>
-						<h3>John Doe</h3>
-						<p>Ceo&Founder</p>
-						<a class="footer-check_btn button" href="#">Check profile</a>
-					</div>
+		<div class="chk-our">
+			<h2>Check our <br><span class="color-blue">awesome team</span></h2>
+			<div class="row">
+				<div class="col-6 col-lg-3 d-flex justify-content-center flex-column align-items-center">
+					<div><img src="img/chk-our/chk-our_ico1.png" alt="ico1"></div>
+					<h3>John Doe</h3>
+					<p>Ceo&Founder</p>
+					<a class="chk-our_btn button" href="#">Check profile</a>
+				</div>
+				<div class="col-6 col-lg-3 d-flex justify-content-center flex-column align-items-center">
+					<div><img src="img/chk-our/chk-our_ico2.png" alt="ico1"></div>
+					<h3>Paul Kowalsy</h3>
+					<p>Ceo&Founder</p>
+					<a class="chk-our_btn button" href="#">Check profile</a>
+				</div>
+				<div class="col-6 col-lg-3 d-flex justify-content-center flex-column align-items-center">
+					<div><img src="img/chk-our/chk-our_ico3.png" alt="ico1"></div>
+					<h3>Emilly Williams</h3>
+					<p>Ceo&Founder</p>
+					<a class="chk-our_btn button" href="#">Check profile</a>
+				</div>
+				<div class="col-6 col-lg-3 d-flex justify-content-center flex-column align-items-center">
+					<div><img src="img/chk-our/chk-our_ico4.png" alt="ico1"></div>
+					<h3>Patricia Green</h3>
+					<p>Ceo&Founder</p>
+					<a class="chk-our_btn button" href="#">Check profile</a>
 				</div>
 			</div>
-		</section>
+		</div>
 	</div>
+	<!-----------------
+	------FOOTER-------
+	------------------>
+	<section class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="footer-text1 col-12 col-lg-5 col-md-12">
+					<h1>Contact with us</h1>
+					<p>Marszalkowska Street 14/35 / Mazowieckie, Poland</p>
+					<h3>Phone: <span class="color-blue">(+48) 604 234 091</span></h3>
+					<h3>E-mail: <span class="color-blue">contact@austera.co</span></h3>
+					<ul class="social-ico d-flex justify-content-between">
+						<li class="twitter"><a href="#"><img src="img/footer/social-ico1.png" alt=""></a></li>
+						<li class="facebook"><a href="#"><img src="img/footer/social-ico2.png" alt=""></a></li>
+						<li class="pinterest"><a href="#"><img src="img/footer/social-ico3.png" alt=""></a></li>
+						<li class="google"><a href="#"><img src="img/footer/social-ico4.png" alt=""></a></li>
+						<li class="email"><a href="#"><img src="img/footer/social-ico5.png" alt=""></a></li>
+					</ul>
+				</div>
+				<div class="col-12 col-lg-7 col-md-12">
+					<form action="" method="post">
+						<input type="text" name="name" placeholder="You name">
+						<input type="email" name="email" placeholder="Your e-mail adress">
+						<textarea></textarea>
+						<button class="footer-btn">Send message</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<div class="footer-nav row d-flex align-items-center justify-content-between">
+				<div class="col-6">
+					<div class="footer-navigation">
+						<ul class="d-flex">
+							<li><a href="#">Homepage</a></li>
+							<li><a href="#">Services</a></li>
+							<li><a href="#">About us</a></li>
+							<li><a href="#">Contact Us</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-6 d-flex justify-content-end">
+					<p>Copyright ⓒ 2015. All rights reserved by MountTec</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
